{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 611,
  "lineage": "77ef8375-02b7-7d05-88f9-6f23d2fb80d0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "dev_proj_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "Ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:856048227344:instance/i-0af163629e328959c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af163629e328959c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "devops_proj_udemey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e83c2f2affa92e1a",
            "private_dns": "ip-10-0-1-16.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.16",
            "public_ip": "54.163.13.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-009ba3a34986b7815",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fa2d5855a94bfb",
            "tags": {
              "Name": "Ansible"
            },
            "tags_all": {
              "Name": "Ansible"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca9d29925a28ae41"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_proj_sg",
            "aws_subnet.dev_proj_pubsubnet_01",
            "aws_vpc.dev_proj_vpc"
          ]
        },
        {
          "index_key": "Jenkins_master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:856048227344:instance/i-0275113fbe25922de",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0275113fbe25922de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "devops_proj_udemey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09684ae7f201fdbad",
            "private_dns": "ip-10-0-1-224.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.224",
            "public_ip": "54.152.186.196",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0176226b157b422cc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fa2d5855a94bfb",
            "tags": {
              "Name": "Jenkins_master"
            },
            "tags_all": {
              "Name": "Jenkins_master"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca9d29925a28ae41"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_proj_sg",
            "aws_subnet.dev_proj_pubsubnet_01",
            "aws_vpc.dev_proj_vpc"
          ]
        },
        {
          "index_key": "Jenkins_slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a0e5d9c7acc336f1",
            "arn": "arn:aws:ec2:us-east-1:856048227344:instance/i-06d769a1c2dd2d6f4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d769a1c2dd2d6f4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "devops_proj_udemey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bffecd2ccc789ac7",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.236",
            "public_ip": "54.242.35.211",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-039a893678c5a884e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b8fa2d5855a94bfb",
            "tags": {
              "Name": "Jenkins_slave"
            },
            "tags_all": {
              "Name": "Jenkins_slave"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ca9d29925a28ae41"
            ]
          },
          "dependencies": [
            "aws_security_group.dev_proj_sg",
            "aws_subnet.dev_proj_pubsubnet_01",
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev_proj_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:internet-gateway/igw-03842dbfd92e7a9a1",
            "id": "igw-03842dbfd92e7a9a1",
            "owner_id": "856048227344",
            "tags": {
              "Name": "dev_proj_igw"
            },
            "tags_all": {
              "Name": "dev_proj_igw"
            },
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "dependencies": [
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_proj_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:route-table/rtb-0267992c6d3ea173e",
            "id": "rtb-0267992c6d3ea173e",
            "owner_id": "856048227344",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03842dbfd92e7a9a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev_proj_rt"
            },
            "tags_all": {
              "Name": "dev_proj_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev_proj_igw",
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_rta_pubsubnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fefbd36dfd62bd44",
            "route_table_id": "rtb-0267992c6d3ea173e",
            "subnet_id": "subnet-0b8fa2d5855a94bfb"
          },
          "dependencies": [
            "aws_internet_gateway.dev_proj_igw",
            "aws_route_table.dev_proj_rt",
            "aws_subnet.dev_proj_pubsubnet_01",
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_proj_rta_pubsubnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074e94b2e2466f744",
            "route_table_id": "rtb-0267992c6d3ea173e",
            "subnet_id": "subnet-0a91198d3ecbbc93d"
          },
          "dependencies": [
            "aws_internet_gateway.dev_proj_igw",
            "aws_route_table.dev_proj_rt",
            "aws_subnet.dev_proj_pubsubnet_02",
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev_proj_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:security-group/sg-0ca9d29925a28ae41",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca9d29925a28ae41",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins GUI Access",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev_proj_sg",
            "name_prefix": "",
            "owner_id": "856048227344",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev_proj_sg"
            },
            "tags_all": {
              "Name": "dev_proj_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_pubsubnet_01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:subnet/subnet-0b8fa2d5855a94bfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8fa2d5855a94bfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856048227344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_proj_pubsubnet_01"
            },
            "tags_all": {
              "Name": "dev_proj_pubsubnet_01"
            },
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "dependencies": [
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_proj_pubsubnet_02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:subnet/subnet-0a91198d3ecbbc93d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a91198d3ecbbc93d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "856048227344",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dev_proj_pubsubnet_02"
            },
            "tags_all": {
              "Name": "dev_proj_pubsubnet_02"
            },
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "dependencies": [
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_proj_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:vpc/vpc-0572b1dbff60de3df",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ed78e7bef06b9bc",
            "default_route_table_id": "rtb-0d759e0f551a01313",
            "default_security_group_id": "sg-002adfd2abe7bc6f8",
            "dhcp_options_id": "dopt-07e663bb71a156390",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0572b1dbff60de3df",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d759e0f551a01313",
            "owner_id": "856048227344",
            "tags": {
              "Name": "dev_proj_vpc"
            },
            "tags_all": {
              "Name": "dev_proj_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.sgs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:856048227344:security-group/sg-0e4d77ae87cb14707",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e4d77ae87cb14707",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access to public",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eks-test",
            "name_prefix": "",
            "owner_id": "856048227344",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0572b1dbff60de3df"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_proj_vpc"
          ]
        }
      ]
    }
  ]
}